db is connected, entities are done, added user and role classes for security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# Database Properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/DB
+spring.datasource.username=postgres
+spring.datasource.password=300P@midorov
 
+# Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+
+#Enabling H2 Console
+spring.h2.console.enabled=true
+
+server.port=9090
