--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 # Database Properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/DB
-spring.datasource.username=postgres
-spring.datasource.password=300P@midorov
+spring.staff.url=jdbc:postgresql://localhost:5432/DB
+spring.staff.username=postgres
+spring.staff.password=300P@midorov
+
+spring.food.url=jdbc:postgresql://localhost:5432/DB_RIS
+spring.food.username=postgres
+spring.food.password=300P@midorov
 
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.database=postgresql
 
 #Enabling H2 Console
 spring.h2.console.enabled=true
